Fri Oct 24 23:26:34 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_each): Hash#each should yield single value.
	  [ruby-talk:84420]

	* hash.c (env_each): ditto for ENV.each.

Thu Oct 23 20:25:32 2003  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/server.rb (GenericServer#start): should rescue
	  IOError from IO::accept. [ruby-dev:21692]

Thu Oct 23 17:59:36 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_cleanup): initialize stack bottom for embedding.
	  [ruby-dev:21686]

	* ext/dl/extconf.rb: move list of files to clean from DEPEND file,
	  to get rid of macro redefinitions.

Thu Oct 23 13:44:00 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y: integrate operations for stack_type.  [ruby-dev:21681]

Thu Oct 23 00:41:45 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/soap/calc/*, test/soap/helloworld/*: set logging threshold
	  to ERROR.

Wed Oct 22 12:53:31 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/collector/dir.rb (Test::Unit::Collector::Dir#collect_file):
	  ignore tests which raised LoadError.

	* test/drb/drbtest.rb, test/ruby/test_beginendblock.rb,
	  test/ruby/test_system.rb: avoid requiring same file twice.

	* test/drb/test_drbssl.rb, test/drb/test_drbunix.rb: should not use
	  ARGV unless invoked directly.  do not create test cases unless
	  required libraries are available.

Wed Oct 22 02:31:34 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (ruby_cleanup): should not ignore exit_value in END
	  execution. [ruby-dev:21670]

Tue Oct 21 23:16:26 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (ruby_cleanup): call finalizers and exit procs before
	  terminating threads.

	* eval.c (ruby_cleanup): preserve ruby_errinfo before ruby_finalize_0().

Tue Oct 21 15:57:11 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/collector/dir.rb (Test::Unit::Collector::Dir#collect_file):
	  prepend the directory of target file to the load path.
