@@ -1,11 +1,11 @@
-#define RUBY_VERSION "1.8.0"
-#define RUBY_RELEASE_DATE "2003-10-24"
-#define RUBY_VERSION_CODE 180
-#define RUBY_RELEASE_CODE 20031024
+#define RUBY_VERSION "1.8.1"
+#define RUBY_RELEASE_DATE "2003-10-25"
+#define RUBY_VERSION_CODE 181
+#define RUBY_RELEASE_CODE 20031025
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
-#define RUBY_VERSION_TEENY 0
+#define RUBY_VERSION_TEENY 1
 #define RUBY_RELEASE_YEAR 2003
 #define RUBY_RELEASE_MONTH 10
-#define RUBY_RELEASE_DAY 24
+#define RUBY_RELEASE_DAY 25
